...
    <string name="import_database_question_merge_option">Merge</string>
    <string name="import_database_question_overwrite_option">Overwrite</string>
    <string name="import_database_overwrite_confirmation_message">
        Overwriting the existing database is irreversible. Are you sure?</string>
    <string name="exported_database_default_name">BootyCrateDatabase.sqlite</string>

    <string name="about_app_body">
        BootyCrate is an open-source shopping list and inventory management app. The
        source code is available under the terms of the Apache License, version 2.0.
        View the source code at: https://github.com/NicholasHochstetler/BootyCrate</string>
    <string name="new_shopping_list_item_duplicate_name_warning">Another item on the shopping list with the same name already exists.</string>
    <string name="new_inventory_item_duplicate_name_warning">Another item in the inventory with the same name already exists.</string>
    <string name="new_shopping_list_item_will_not_be_linked_warning">An item with the same name already
...

    <string name="update_list_reminder_description">Remind me to update my shopping list or inventory</string>
    <string name="repeat_description">Repeat</string>
    <string name="update_list_reminder_title">Reminder</string>
    <string name="update_list_reminder_message">Remember to update your shopping list / inventory.</string>
    <string name="pref_privacy_policy_key">privacy_policy</string>
    <string name="pref_privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_text">BootyCrate does not ask for, collect, or share any personal
        information. BootyCrate only stores user preferences and entered shopping list and inventory
        item data on the user\'s device, or in external files if the user chooses to export this
        data. This data is never uploaded to other computers or servers unless the user does this
        themselves with their exported data files.</string>
    <string name="invalid_imported_db_error_message">The imported database was invalid or empty. Reverting to previous database instead.</string>
    <string name="error">Error</string>
...
