...
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize" />

    <com.cliffracertech.bootycrate.view.BottomNavigationDrawer
        android:id="@+id/bottomNavigationDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:translationY="-456dp"
        style="@style/BottomNavigationDrawer" >

        <com.cliffracertech.bootycrate.view.BootyCrateBottomAppBar
...
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="top|start"
            android:layout_marginStart="24dp"
            style="@style/AppTitle" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settingsButton"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_gravity="top|end"
            android:layout_marginEnd="60dp"
            style="@style/SettingsButton" />

...
