...

<!--    <PreferenceCategory android:title="@string/pref_category_display_title"-->
<!--        android:layout="@layout/preference_category" >-->

<!--        <ListPreference-->
<!--            android:layout="@layout/preference"-->
<!--            android:key="@string/pref_light_dark_mode_key"-->
<!--            android:title="@string/pref_light_dark_mode_title"-->
<!--            android:entries="@array/light_dark_theme_preference_entries"-->
<!--            android:entryValues="@array/light_dark_theme_preference_entries"-->
<!--            android:persistent="true"/>-->
<!--&lt;!&ndash;        <Preference&ndash;&gt;-->
<!--&lt;!&ndash;            android:key="@string/pref_theme_gradient_screen"&ndash;&gt;-->
...
